--- a/index.html
+++ b/index.html
@@ -4,33 +4,92 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Dinamita - Tu tienda online</title>
-    
-</head>
+</h>
 <body>
+
+<!--Titulo-->
 <header>
-    <h1>Bienvenidxs a la Tienda Online de Dinamita indumentaria !</h1>
+    <div class="container">
+        <div class="logo">
+        <img src="./images/logoGatito.jpeg" width="150" height="150" alt="logoGatito" class="bordesRound" >
+    </div>
+    <h1>Bienvenidos a Dinamita Indumentaria !</h1>
 </header>
-        
-<img src="images/Oscuro - rosa, blanco y verde.png" alt="logo">
 
-        <audio autoplay loop controls style="height: 25px;">
-<source src="./audio/Britney Spears - I'm A Slave 4 U (Official HD Video).mp3" type="audio/mp3">
-        </audio>
-<nav>Inicio</nav>
-    <a href="#productos">Productos</a>
-    <section>
-    <article>Jeans Nissie</article>
-    <article>Jeans Las Locas</article>
-    <article>Remeras/tops</article>
-    <article>SALE!</article>
-</section>
-    <a href="./pages/Nosotros.html">Acerca de nosotros.</a>
-    <BR>
-    <a href="#comprar">Cómo comprar?</a>
-    <BR>
-    <a href="buscar">Buscar</a>
-    <BR>
+<!-- Barra de navegacion -->
+<nav>
+    <ul>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Productos</a>
+        <ul class="submenu">
+            <li><a href="#">Denim</a></li>
+            <li><a href="#">Remeras/Tops</a></li>
+            <li><a href="#">Abrigos</a></li>
+            <li><a href="#">Accesorios</a></li>
+            <li><a href="#">SALE!</a></li>
+        </ul>
+        </li>
+        <li><a href="./pages/cambios.html">Política de cambios</a></li>
+        <li><a href="./pages/comocomprar.html">¿Cómo comprar?</a></li>
+        <li><a href="#">Buscar</a></li>
+    </ul>
+    </nav>
+<!-- Catalogo -->
+    <div class="container-icon">
+    <div class="item">
+        <figure>
+            <img src="./images/denimgray1.jpeg" alt="denimgray1">
+        </figure>
+    <div class="info producto">
+        <h2>Clásico Gray</h2>
+        <h3>Clásico elastizado - Tiro alto.</h3>
+        <p class="price">$7400</p>
+        <button>Añadir al carrito</button>
+            </div>
+        <div class="container-icon">
+        <div class="item">
+            <figure>
+                <img src="./images/CamisetaGAMMA.jpeg" alt="camisetaGamma">
+            </figure>
+            <div class="info producto">
+            <h2>Camiseta Gamma</h2>
+            <h3>Camiseta con escote y aro</h3>
+            <p class="price">$3500</p>
+            <button>Añadir al carrito</button>
+        </div>
+        <div class="container-icon">
+        <div class="item">
+            <figure>
+                <img src="./images/camisetaWinx.jpeg" alt="denimgray1">
+            </figure>
+            <div class="info producto">
+            <h2>Camiseta Winx</h2>
+            <h3>Camiseta de morley</h3>
+            <p class="price">$3200</p>
+            <button>Añadir al carrito</button>
+            </div>
+        <div class="container-icon">
+        <div class="item">
+            <figure>
+                <img src="./images/clasicoCharmy.jpeg" alt="denimgray1">
+            </figure>
+            <div class="info producto">
+            <h2>Clásico Charmy</h2>
+            <h3>Elastizado - tiro alto</h3>
+            <p class="price">$7400</p>
+            <button>Añadir al carrito</button>
+            </div>
 
+<!-- Redes Sociales -->
+<footer>
+    <div class="redes-sociales">
+        <a href="https://api.whatsapp.com/send?phone=1133937630" target="_blank"><img src="./images/whatsapp.svg" alt="Instagram"></a>
+        <a href="https://www.instagram.com/dinamita.innd/" target="_blank"><img src="./images/instagram.svg" alt="Instagram"></a>
+    </div>
+    <span class="copyright">©2023, Meliche Natalia. All rights reserved.</span>
+</footer>
 </body>
 </html>
